# AutoHotKey

./: .cursorignore  .gitignore  .justfile  AutoHotKey - Shortcut.lnk  README.md
Hekili/: CHANGELOG.md  Hekili.toc
WowAddons/: Zekili.7z  ZekiliOld.7z  ZenSoundPack.7z
WowAddons/Configs/: Plater.md
WowAddons/PlaterScripts/: ImportantStops.lua  NaowhKicks.lua  NaowhStops.lua
WowAddons/Zekili/: CHANGELOG.md  Classes.lua  Constants.lua  Core.lua  Events.lua  Formatting.lua  MultilineEditor.lua  Options.lua  README.md  Scripts.lua  State.lua  Targets.lua  UI.lua  Utils.lua  Zekili.lua  Zekili.toc
WowAddons/Zekili/BfA/: Items.lua
WowAddons/Zekili/Cataclysm/: Items.lua
WowAddons/Zekili/Dragonflight/: Classes.lua  Items.lua  MageArcane.lua  MageFire.lua  MageFrost.lua  MonkBrewmaster.lua  MonkMistweaver.lua  PaladinHoly.lua  PriestDiscipline.lua  PriestHoly.lua
WowAddons/Zekili/Legion/: Items.lua
WowAddons/Zekili/Shadowlands/: Covenants.lua  Legendaries.lua  SoulbindConduits.lua  Trinkets.lua
WowAddons/Zekili/TheBurningCrusade/: Items.lua
WowAddons/Zekili/TheWarWithin/: Classes.lua  DeathKnightBlood.lua  DeathKnightFrost.lua  DeathKnightUnholy.lua  DemonHunterHavoc.lua  DemonHunterVengeance.lua  DruidBalance.lua  DruidFeral.lua  DruidGuardian.lua  DruidRestoration.lua  EvokerAugmentation.lua  EvokerDevastation.lua  EvokerPreservation.lua  HunterBeastMastery.lua  HunterMarksmanship.lua  HunterSurvival.lua  Items.lua  MageArcane.lua  MageFire.lua  MageFrost.lua  MonkBrewmaster.lua  MonkMistweaver.lua  MonkWindwalker.lua  PaladinHoly.lua  PaladinProtection.lua  PaladinRetribution.lua  PriestDiscipline.lua  PriestHoly.lua  PriestShadow.lua  RogueAssassination.lua  RogueOutlaw.lua  RogueSubtlety.lua  ShamanElemental.lua  ShamanEnhancement.lua  ShamanRestoration.lua  WarlockAffliction.lua  WarlockDemonology.lua  WarlockDestruction.lua  WarriorArms.lua  WarriorFury.lua  (+1 more)
WowAddons/Zekili/Wrath/: Items.lua
WowAddons/ZekiliOld/: Bindings.xml  CHANGELOG.md  Classes.lua  Core.lua  Events.lua  Options.lua  README.md  State.lua  Targets.lua  UI.lua  Zekili.toc
WowAddons/ZekiliOld/BfA/: AzeritePowers.lua  Essences.lua
WowAddons/ZekiliOld/Shadowlands/: AnimaPowers.lua  SoulbindConduits.lua
WowAddons/ZekiliOld/TheWarWithin/: DeathKnightBlood.lua  DeathKnightFrost.lua  Items.lua  (+33 more)
WowAddons/Zen-DungeonTips/: Readme.md  Zen-DungeonTips DF.lua  Zen-DungeonTips.toc  ZenConf.lua  ZenDatabase.lua  ZenFrame.lua
WowAddons/ZenAddonDev/: ZenAddonDev.lua  ZenAddonDev.toc
WowAddons/ZenBridge/: Weakaura.lua  ZenBridge.lua  ZenBridge.toc  testing.lua
WowAddons/ZenDecay/: ZenDecay.lua  ZenDecay.toc
WowAddons/ZenDungeonTips/: ZenDTConf.lua  ZenDTFrame.lua  ZenDungeonTips.lua  ZenDungeonTips.toc
WowAddons/ZenKeyLink/: ZenKeyLink.lua  ZenKeyLink.toc  ZenLib.lua
WowAddons/ZenSoundPack/: ZenSoundPack.lua  ZenSoundPack.toc
ahk_core/: Cargo.toml
ahk_core/src/: main.rs
core/: .gitignore  Cargo.toml  tracing.folded  zen_base_capture.opt
core/src/: image_processing.rs  image_processing.rs.old  main.rs  utils.rs
crates/Hekili/: UI.lua
(+32 files in other folders)
