[package]
name = "AutoHotKey"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
image = {version = "0.24.6", features = ["png"]}
#inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
inputbot = { path = "../crates/InputBot" }
lazy_static = "1.5.0"
rayon = "1.10.0"
#spectrust = "0.2.0"
spectrust = { path = "../crates/spectrust" }
