[package]
name = "AutoHotKey"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
image = {version = "0.24", features = ["png"]}
#inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
inputbot = { path = "../crates/InputBot" }
lazy_static = "1.5"
rayon = "1.10"
screenshots = "0.5"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"













#spectrust = { path = "../crates/spectrust" }

[profile.release]
debug = true
lto = true