[package]
name = "AutoHotKey"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
image = {version = "0.24", features = ["png"]}
#inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
inputbot = { path = "../crates/InputBot" }
lazy_static = "1.5"
rayon = "1.10"
screenshots = "0.5"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
eframe = {version = "0.28.1", features = ["default_fonts", "glow"]}
#egui_extras = {version = "0.28", features = ["default", "all_loaders"]}
tap = "1.0.1"
winit = "0.30.4"
egui-winit = "0.28.1"
egui_glow = "0.28.1"
glutin = "0.32.0"
glutin-winit = "0.5.0"
windows = "0.58.0"

#spectrust = { path = "../crates/spectrust" }

[profile.release]
debug = true
lto = false
